--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,13 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "illuminate/database": "~5.5.25|5.6.*|5.7.*",
-        "illuminate/support": "^5.5.14",
-        "staudenmeir/laravel-migration-views": "^1.0"
+        "php": "^7.1.3",
+        "illuminate/database": "5.8.*",
+        "staudenmeir/laravel-migration-views": "^1.1"
     },
     "require-dev": {
-        "laravel/homestead": "^7.0",
-        "phpunit/phpunit": "~6.5"
+        "laravel/homestead": "^8.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-4": {
