--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "staudenmeir/laravel-migration-views": "^1.5"
     },
     "require-dev": {
-        "laravel/homestead": "^11.0",
+        "laravel/homestead": "^11.0|^12.0",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
