--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "staudenmeir/laravel-migration-views": "^1.5"
     },
     "require-dev": {
+        "illuminate/pagination": "^8.0",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
