--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^8.0.2",
         "illuminate/database": "^9.0",
-        "staudenmeir/laravel-migration-views": "dev-master"
+        "staudenmeir/laravel-migration-views": "^1.6"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0"
