--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "staudenmeir/laravel-migration-views": "^1.6"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0"
+        "orchestra/testbench": "^7.0",
+        "nesbot/carbon": "^2.62.1"
     },
     "autoload": {
         "psr-4": {
