--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,12 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
-        "illuminate/database": "^9.0",
-        "staudenmeir/laravel-migration-views": "^1.6"
+        "php": "^8.1",
+        "illuminate/database": "^10.0",
+        "staudenmeir/laravel-migration-views": "^1.7"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0",
-        "nesbot/carbon": "^2.62.1"
+        "orchestra/testbench": "^8.0"
     },
     "autoload": {
         "psr-4": {
