--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "staudenmeir/laravel-migration-views": "^1.7"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0"
+        "orchestra/testbench": "^8.0",
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
