--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "staudenmeir/laravel-migration-views": "^1.7"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "orchestra/testbench": "^8.0",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.1",
@@ -35,7 +36,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Staudenmeir\\LaravelMergedRelations\\DatabaseServiceProvider"
+                "Staudenmeir\\LaravelMergedRelations\\DatabaseServiceProvider",
+                "Staudenmeir\\LaravelMergedRelations\\IdeHelperServiceProvider"
             ]
         }
     },
