--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
-        "orchestra/testbench": "^9.0",
-        "phpstan/phpstan": "^1.10",
+        "laravel/framework": "^11.0",
+        "mockery/mockery": "^1.6",
+        "orchestra/testbench-core": "^9.5",
+        "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.0",
         "staudenmeir/eloquent-has-many-deep": "^1.20"
     },
