--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,17 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/database": "^11.0",
-        "staudenmeir/laravel-migration-views": "^1.9.1"
+        "illuminate/database": "^12.0",
+        "staudenmeir/laravel-migration-views": "^1.11"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
-        "laravel/framework": "^11.0",
+        "laravel/framework": "^12.0",
         "mockery/mockery": "^1.6",
-        "orchestra/testbench-core": "^9.5",
+        "orchestra/testbench-core": "^10.0",
         "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.0",
-        "staudenmeir/eloquent-has-many-deep": "^1.20"
+        "staudenmeir/eloquent-has-many-deep": "dev-l12"
     },
     "autoload": {
         "psr-4": {
@@ -36,6 +36,9 @@
         "sort-packages": true
     },
     "extra": {
+        "branch-alias": {
+            "dev-l12": "1.10.x-dev"
+        },
         "laravel": {
             "providers": [
                 "Staudenmeir\\LaravelMergedRelations\\DatabaseServiceProvider",
